2004-02-04  Rodrigo Moya <rodrigo@ximian.com>

	* gui/main.c (launch_alarm_daemon_cb): display the exception message
	on error.

	* gui/gnome-cal.c (open_ecal): open calendars asynchronously.
	(client_cal_opened_cb): on success, add the clients to the models here.
	(gnome_calendar_add_event_source, gnome_calendar_construct): not here.

2004-02-04  Kidd Wang  <kidd.wang@sun.com>

	* gui/dialogs/alarm-page.glade: change the access key for adding a
	reminder from Alt+a to Alt+d to avoid conflict with the menuitem.

2004-02-04 Yong Sun <Yong.Sun@sun.com>

	* gui/print.c: Fix a bug in evolution/calendar/gui/print.c:
	bound_text(). It does not break lines with the correct boundary of UTF-8
	characters. So, for non-latin locales, it will cause printing issues.

2004-02-03  Dan Winship  <danw@ximian.com>

	* gui/tasks-component.h: Fix location of e-activity-handler.h
	#include

	* gui/Makefile.am (INCLUDES): add widgets/misc for
	e-activity-handler.h and e-task-bar.h

	* gui/dialogs/Makefile.am (INCLUDES): Likewise

2004-02-02  JP Rosevear <jpr@ximian.com>

	* importers/icalendar-importer.c (support_format_fn): use
	g_file_get_contents
	(load_file_fn): ditto
	(vcal_support_format_fn): ditto
	(load_vcalendar_file): ditto

2004-01-30  JP Rosevear <jpr@ximian.com>

	* remove dead files

2004-01-29 Gary Ekker <gekker@novell.com>

	Fixes #51871

	* gui/dialogs/calendar-setup.c (calendar_setup_edit_calendar): add
	activate handler for name_entry
	(calendar_setup_edit_task_list): ditto

2004-01-30  JP Rosevear <jpr@ximian.com>

	* gui/tasks-component.c (create_new_todo): remove extraneous ;

	Fixes #53418

2004-01-29  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (create_calendar_contact_source): don't set the
	group to be read only until after the source is added.

2004-01-29  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (migrate_ical_folder_to_source): migrate to a
	specific source
	(migrate_ical_folder): create a new source based on the new source
	name/uid